		* fixed #686: hide system support in main menu when disabled (thanks to Grégory Marigot)
		* Fixed #687: hide disabled features from the client main menu (thanks to Grégory Marigot)
	- LANGUAGES:
		* Updated French translation (thanks to Grégory Marigot)

2007-09-21 Johannes Schobig
	- GUI:
		* Fixed #573: customer possible to catch all mails for severall domains
		* Fixed #658: hosting plan can be deleted but there is another order with it
		* Fixed #659: resulted of ticket #658 an order cant be update if the hosting plan is deleted
		* Fixed #671: Missing unit in statistics [MB]
		* Fixed #689: syntax error, unexpected T_STRING on LoginPage

2007-09-20 Benedikt Heintel
	- DISTS:
		* Fixed #677: files of bind placed wrong on ubuntu
	- GUI:
		* Fixed #646: trying to delete IP assigned when there's only one IP available (not possible any more)
		* Fixed #680: "web statistics" link in customer's mode should be hidden when awstats is disabled (thanks to Grégory Marigot)
		* Fixed #684: multiline translation bugfix (thanks to Grégory Marigot)

2007-09-19 Raphael Geissert
    - CONFIGS:
        * Fixed a file name typo

2007-09-19 Benedikt Heintel
	- DOCS:
		* Fixed #626: Updated Fedora (Core 7)
	- DISTS:
		* Fixed #626: Updated Fedora files
	- LANGUAGES:
		* Updated German translation (thanks to Klaas Tammling)

2007-09-16 Raphael Geissert
    - LANGUAGES:
        * Updated Czech translation (thanks to Josef Pinc)

2007-09-12 Benedikt Heintel
	- GUI:
		* Fixed #647: IPs can't be "uninstalled" only removed
		* Fixed #654: if bruteforce is deaktivated login failed
		* Fixed #666: fr_FR.po is half its size
		* Fixed #667: creating a user with -1 databases but 0/1+ users is possible
		* Fixed #668: edit link in reseller/domain_alias.php says {CHANGE}
		* Fixed #669: /reseller/edit_alias.php displays domain in IDN format (and a lot of other IDN stuff)

2007-09-11 Benedikt Heintel
	- DISTS:
		* Fixed #649: working gentoo config (Thank you Lelik)
	- GUI: